<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg_drawable">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:maxLines="1"
        android:textAppearance="?titleTextAppearance"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/biometric_setting_biometric" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:textColor="?mimoColorBlack3"
        android:textSize="15sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="@string/biometric_setting_biometric_subtitle"
        tools:textColor="@color/black_3rd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title"
        tools:text="@string/biometric_setting_biometric_desc" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_negative"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_white_radius_32"
        android:gravity="center"
        android:text="@string/common_skip"
        android:textColor="?mimoColorGray2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        tools:textColor="@color/gray_2nd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_positive"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shape_blue_radius_32"
        android:gravity="center"
        android:text="@string/common_setting_now"
        android:textColor="?mimoColorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_negative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_negative"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>