<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_round_corners_bg">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title"
        app:srcCompat="@drawable/svg_gray_close" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:textAppearance="@style/Mimo.TextAppearance.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/biometric_input_pay_password"
        tools:textColor="@color/black_11th" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="?mimoColorBlack11"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="@string/biometric_sending_crypto"
        tools:textColor="@color/black_11th" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_message">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/biometric_contract_trading"
            android:textColor="?mimoColorBlack11"
            android:textSize="19sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textColor="@color/black_11th"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tv_amount, tv_currency"
            tools:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_normal"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/din_medium"
            android:gravity="bottom"
            android:maxLines="1"
            android:textColor="?mimoColorBlack12"
            android:textSize="42sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/tv_currency"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10.27"
            tools:textColor="@color/black_12th" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:gravity="bottom"
            android:textColor="?mimoColorBlack12"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/tv_amount"
            tools:text="ETMP"
            tools:textColor="@color/black_12th" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_nft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tv_nft_name, tv_nft_token_id"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nft_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:ellipsize="middle"
            android:singleLine="true"
            android:textColor="?mimoColorBlack11"
            android:textSize="19sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/tv_nft_token_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Pulsar in the Distance Pulsar in the Distance Pulsar in the Distance "
            tools:textColor="@color/black_11th"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nft_token_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:ellipsize="middle"
            android:singleLine="true"
            android:textColor="?mimoColorBlack11"
            android:textSize="19sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nft_name"
            tools:text="650495"
            tools:textColor="@color/black_11th"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_content"
        tools:layout_height="@dimen/divider_height" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_pay_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="15dp"
        android:text="@string/payment_method"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/mine_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_pay_method" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="332dp"
        android:paddingTop="96dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_fingerprint"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pay_method"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="layout_password, et_password"
        tools:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_wallet">

        <com.cyberflow.mimolite.lib_private_key.widget.SquareShapeImageView
            android:id="@+id/iv_password_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_square_edit_view"
            android:scaleType="centerInside"
            tools:src="@drawable/ic_black_dot" />

        <com.cyberflow.mimolite.lib_private_key.widget.SquareShapeImageView
            android:id="@+id/iv_password_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_square_edit_view"
            android:scaleType="centerInside" />

        <com.cyberflow.mimolite.lib_private_key.widget.SquareShapeImageView
            android:id="@+id/iv_password_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_square_edit_view"
            android:scaleType="centerInside" />

        <com.cyberflow.mimolite.lib_private_key.widget.SquareShapeImageView
            android:id="@+id/iv_password_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_square_edit_view"
            android:scaleType="centerInside" />

        <com.cyberflow.mimolite.lib_private_key.widget.SquareShapeImageView
            android:id="@+id/iv_password_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_square_edit_view"
            android:scaleType="centerInside" />

        <com.cyberflow.mimolite.lib_private_key.widget.SquareShapeImageView
            android:id="@+id/iv_password_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_square_edit_view"
            android:scaleType="centerInside" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@color/transparent"
        android:cursorVisible="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:textColor="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password" />

</androidx.constraintlayout.widget.ConstraintLayout>